# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  authentication.html  biome.json  browser-automation.html  changelog.html  cloud-deploy.html  comparison.html  configuration.html  docker.html  flake.nix  fly.toml  graphql.html  hooks.html  index.html  install.sh  installation.html  justfile  local-llm.html  local-validation.html  mcp.html  memory.html  mise.toml  mobile-pwa.html  print.html  providers.html  quickstart.html  railway.json  render.yaml  sandbox.html  scheduling.html  searchindex.js  security.html  session-branching.html  (+11 more)
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  model.rs  multimodal.rs  prompt.rs  provider_chain.rs  runner.rs  silent_turn.rs  tool_registry.rs
crates/agents/src/providers/: anthropic.rs  async_openai_provider.rs  gemini.rs  gemini_oauth.rs  genai_provider.rs  github_copilot.rs  kimi_code.rs  mod.rs  openai.rs  openai_codex.rs  openai_compat.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential_store.rs  lib.rs  locality.rs  webauthn.rs
crates/auto-reply/: Cargo.toml
crates/auto-reply/src/: error.rs  lib.rs  reply.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: basic.rs  boot.rs
crates/benchmarks/src/: lib.rs
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  detect.rs  error.rs  lib.rs  manager.rs  pool.rs  snapshot.rs  types.rs
crates/caldav/: Cargo.toml
crates/caldav/src/: client.rs  discovery.rs  ical.rs  lib.rs  tool.rs  types.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: error.rs  lib.rs  server.rs
crates/channels/: Cargo.toml
crates/channels/src/: error.rs  gating.rs  lib.rs  message_log.rs  plugin.rs  registry.rs  store.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  browser_commands.rs  channel_commands.rs  config_commands.rs  db_commands.rs  doctor_commands.rs  hooks_commands.rs  import_commands.rs  main.rs  memory_commands.rs  sandbox_commands.rs  tailscale_commands.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  hooks.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: env_subst.rs  error.rs  lib.rs  loader.rs  migrate.rs  schema.rs  template.rs  validate.rs
crates/cron/: Cargo.toml
crates/cron/migrations/: 20240205100002_init.sql
crates/cron/src/: error.rs  heartbeat.rs  lib.rs  parse.rs  schedule.rs  service.rs  store.rs  store_file.rs  store_memory.rs  store_sqlite.rs  system_events.rs  types.rs
crates/gateway/: Cargo.toml  askama.toml
crates/gateway/migrations/: 20240205100003_init.sql  20260205100000_api_keys_scopes.sql  20260210200000_env_variables_encrypted.sql  20260211110000_agents.sql  20260214000000_env_variables_encrypted.sql  20260224090000_channels_multi_key.sql  20260224101000_agents_default_flag.sql
crates/gateway/src/: agent_persona.rs  approval.rs  auth.rs  auth_middleware.rs  auth_routes.rs  auth_webauthn.rs  broadcast.rs  channel.rs  channel_events.rs  channel_outbound.rs  channel_store.rs  chat.rs  chat_error.rs  cron.rs  env_routes.rs  graphql_routes.rs  lib.rs  local_llm_setup.rs  logs.rs  mcp_health.rs  mcp_service.rs  message_log_store.rs  methods.rs  metrics_middleware.rs  metrics_routes.rs  nodes.rs  onboarding.rs  pairing.rs  project.rs  provider_setup.rs  push.rs  push_routes.rs  request_throttle.rs  server.rs  services.rs  session.rs  session_types.rs  share_render.rs  state.rs  tailscale.rs  (+9 more)
crates/gateway/src/assets/: app.js  index.html  login.html  manifest.json  onboarding.html  style.css  (+1 more)
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/gateway/ui/: input.css  package-lock.json  package.json  playwright.config.js
crates/graphql/: Cargo.toml
crates/graphql/src/: context.rs  error.rs  lib.rs  scalars.rs  schema.rs
crates/graphql/tests/: integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  client.rs  error.rs  lib.rs  manager.rs  registry.rs  sse_transport.rs  tool_bridge.rs  traits.rs  transport.rs  types.rs
crates/media/: Cargo.toml
crates/media/src/: cleanup.rs  error.rs  image_ops.rs  lib.rs  server.rs  store.rs
crates/memory/: Cargo.toml
crates/memory/migrations/: 20240205100004_init.sql
crates/memory/src/: chunker.rs  config.rs  embeddings_batch.rs  embeddings_fallback.rs  embeddings_local.rs  embeddings_openai.rs  lib.rs  manager.rs  reranking.rs  schema.rs  search.rs  session_export.rs  store_sqlite.rs  tools.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: definitions.rs  error.rs  lib.rs  recorder.rs  snapshot.rs  store.rs  tracing_integration.rs
crates/msteams/: Cargo.toml
crates/msteams/src/: activity.rs  auth.rs  config.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: callback_server.rs  config_dir.rs  defaults.rs  device_flow.rs  discovery.rs  error.rs  flow.rs  kimi.rs  lib.rs  registration_store.rs  storage.rs  types.rs
crates/oauth/tests/: oauth_tests.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: error.rs  lib.rs  service.rs  state.rs  wizard.rs
crates/openclaw-import/: Cargo.toml
crates/openclaw-import/src/: channels.rs  detect.rs  error.rs  identity.rs  lib.rs  mcp_servers.rs  memory.rs  providers.rs  report.rs  sessions.rs  skills.rs  types.rs  watcher.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: error.rs  hook_discovery.rs  hook_eligibility.rs  hook_metadata.rs  hooks.rs  install.rs  lib.rs  shell_hook.rs  wasm_hook.rs
crates/projects/: Cargo.toml
crates/projects/migrations/: 20240205100000_init.sql
crates/projects/src/: complete.rs  context.rs  detect.rs  error.rs  lib.rs  store.rs  worktree.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/provider-setup/: Cargo.toml
crates/provider-setup/src/: error.rs  lib.rs
crates/qmd/: Cargo.toml
crates/qmd/src/: lib.rs  manager.rs  store.rs
crates/routing/: Cargo.toml
crates/routing/src/: error.rs  lib.rs  resolve.rs
crates/service-traits/: Cargo.toml
crates/service-traits/src/: lib.rs
(+496 files in other folders)
