[workspace]
members = [
  "crates/agents",
  "crates/auto-reply",
  "crates/browser",
  "crates/canvas",
  "crates/channels",
  "crates/cli",
  "crates/common",
  "crates/config",
  "crates/cron",
  "crates/gateway",
  "crates/mcp",
  "crates/media",
  "crates/memory",
  "crates/metrics",
  "crates/oauth",
  "crates/onboarding",
  "crates/plugins",
  "crates/projects",
  "crates/protocol",
  "crates/qmd",
  "crates/routing",
  "crates/sessions",
  "crates/skills",
  "crates/telegram",
  "crates/tools",
  "crates/voice",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.package]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/moltis-org/moltis"
version    = "0.2.9"

[workspace.dependencies]
# Async runtime
tokio = { features = ["full"], version = "1" }
# HTTP/WS server
axum       = { features = ["ws"], version = "0.8" }
axum-extra = "0.10"
# Serialization
serde      = { features = ["derive"], version = "1" }
serde_json = "1"
# Error handling
anyhow    = "1"
thiserror = "2"
# OpenSSL (vendored for cross-compilation)
openssl = { features = ["vendored"], version = "0.10" }
# Logging
opentelemetry         = { version = "0.29" }
opentelemetry-otlp    = { features = ["tonic"], version = "0.29" }
opentelemetry_sdk     = { features = ["rt-tokio"], version = "0.29" }
tracing               = "0.1"
tracing-opentelemetry = "0.30"
tracing-subscriber    = { features = ["env-filter", "json"], version = "0.3" }
# CLI
clap = { features = ["derive", "env"], version = "4" }
# Database
sqlx = { features = ["migrate", "runtime-tokio", "sqlite"], version = "0.8" }
# HTTP client
reqwest = { features = ["json", "stream"], version = "0.12" }
# UUID
uuid = { features = ["v4"], version = "1" }
# Async
async-stream = "0.3"
async-trait  = "0.1"
directories  = "6"
dotenvy      = "0.15"
futures      = "0.3"
once_cell    = "1"
tokio-stream = "0.1"
tokio-test   = "0.4"
tokio-util   = "0.7"
# Config formats
serde_yaml        = "0.9"
tokio-tungstenite = "0.26"
toml              = "0.8"
# LLM provider crates (optional, behind feature flags)
async-openai = { features = ["chat-completion"], version = "0.32" }
base64       = "0.22"
bytes        = "1"
encoding_rs  = "0.8"
fd-lock      = "4"
genai        = "0.5"
gix          = "0.78"
llama-cpp-2  = "0.1"
open         = "5.3"
rand         = "0.9"
secrecy      = { features = ["serde"], version = "0.8" }
sha2         = "0.10"
sysinfo      = "0.34"
teloxide     = { features = ["macros"], version = "0.13" }
# TLS / certificate generation
axum-server    = { features = ["tls-rustls"], version = "0.7" }
rcgen          = "0.13"
rustls         = { features = ["ring"], version = "0.23" }
rustls-pemfile = "2"
time           = "0.3"
tokio-rustls   = "0.26"
# Cryptography / authentication
argon2            = "0.5"
p256              = "0.13"
password-hash     = "0.5"
webauthn-rs       = "0.5"
webauthn-rs-proto = "0.5"
# Web / HTTP utilities
dashmap     = "6"
hostname    = "0.4"
http        = "1"
tower-http  = "0.6"
url         = "2"
urlencoding = "2"
web-push    = "0.10"
# Metrics
metrics                     = "0.24"
metrics-exporter-prometheus = "0.16"
metrics-tracing-context     = "0.16"
# Content processing
image          = { default-features = false, features = ["jpeg", "png", "webp"], version = "0.25" }
pulldown-cmark = { default-features = false, version = "0.12" }
# Filesystem / archiving
chrono                = "0.4"
chrono-tz             = { version = "0.10", features = ["serde"] }
cron                  = "0.13"
dirs-next             = "2"
flate2                = "1"
include_dir           = "0.7"
notify-debouncer-full = "0.7"
tar                   = "0.4"
tempfile              = "3"
walkdir               = "2"

# Workspace crates
moltis            = { path = "crates/cli" }
moltis-agents     = { features = ["provider-github-copilot", "provider-kimi-code", "provider-openai-codex"], path = "crates/agents" }
moltis-auto-reply = { path = "crates/auto-reply" }
moltis-browser    = { path = "crates/browser" }
moltis-canvas     = { path = "crates/canvas" }
moltis-channels   = { path = "crates/channels" }
moltis-common     = { path = "crates/common" }
moltis-config     = { path = "crates/config" }
moltis-cron       = { path = "crates/cron" }
moltis-gateway    = { path = "crates/gateway" }
moltis-mcp        = { path = "crates/mcp" }
moltis-media      = { path = "crates/media" }
moltis-memory     = { path = "crates/memory" }
moltis-metrics    = { path = "crates/metrics" }
moltis-oauth      = { path = "crates/oauth" }
moltis-onboarding = { path = "crates/onboarding" }
moltis-plugins    = { path = "crates/plugins" }
moltis-projects   = { path = "crates/projects" }
moltis-protocol   = { path = "crates/protocol" }
moltis-qmd        = { path = "crates/qmd" }
moltis-routing    = { path = "crates/routing" }
moltis-sessions   = { path = "crates/sessions" }
moltis-skills     = { path = "crates/skills" }
moltis-telegram   = { path = "crates/telegram" }
moltis-tools      = { path = "crates/tools" }
moltis-voice      = { path = "crates/voice" }
