[package]
edition.workspace = true
name              = "moltis-agents"
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:moltis-metrics"]

[dependencies]
anyhow          = { workspace = true }
async-stream    = { workspace = true }
async-trait     = { workspace = true }
futures         = { workspace = true }
moltis-common   = { workspace = true }
moltis-config   = { workspace = true }
moltis-sessions = { workspace = true }
moltis-skills   = { workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-stream    = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }

# Optional
moltis-metrics = { optional = true, workspace = true }

[dev-dependencies]
axum     = { workspace = true }
http     = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
