[package]
name = "benchmarks"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde_json = { workspace = true }

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.3" }

[[bench]]
name = "basic"
harness = false

[lints]
workspace = true
