[package]
edition.workspace    = true
license.workspace    = true
name                 = "benchmarks"
repository.workspace = true
version.workspace    = true

[dependencies]
moltis-agents   = { workspace = true }
moltis-config   = { workspace = true }
moltis-sessions = { workspace = true }
serde_json      = { workspace = true }
tempfile        = { workspace = true }
toml            = { workspace = true }

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.3" }

[[bench]]
harness = false
name    = "boot"

[lints]
workspace = true
