[package]
edition.workspace = true
name              = "moltis-browser"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
moltis-common  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
