[package]
edition.workspace = true
name              = "moltis-browser"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
async-trait    = "0.1"
base64         = { workspace = true }
chromiumoxide  = { default-features = false, features = ["tokio-runtime"], version = "0.8" }
futures        = { workspace = true }
moltis-common  = { workspace = true }
moltis-config  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sysinfo        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = "2.5"
uuid           = { workspace = true }
which          = "8.0"

[features]
default = []
metrics = ["dep:moltis-metrics"]
tracing = []

[lints]
workspace = true
