[package]
edition.workspace = true
name              = "moltis-canvas"
version.workspace = true

[dependencies]
anyhow        = { workspace = true }
axum          = { workspace = true }
moltis-common = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }

[lints]
workspace = true
