[package]
edition.workspace = true
name              = "moltis-canvas"
version.workspace = true

[dependencies]
axum           = { workspace = true }
moltis-common  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
