[package]
edition.workspace = true
name              = "moltis-channels"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
async-trait    = "0.1"
moltis-common  = { workspace = true }
moltis-config  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
