[package]
description       = "Personal AI gateway inspired by OpenClaw"
edition.workspace = true
homepage          = "https://www.moltis.org/"
license           = "MIT"
name              = "moltis"
repository        = "https://github.com/moltis-org/moltis"
version.workspace = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/moltis-{ version }-{ target }.tar.gz"

[package.metadata.deb]
assets = [
  [
    "target/release/moltis",
    "usr/bin/",
    "755",
  ],
  [
    "crates/gateway/src/assets",
    "usr/share/moltis/assets",
    "644",
  ],
]
copyright = "2025, Moltis Contributors"
depends = "$auto"
maintainer = "Moltis Contributors"
name = "moltis"
priority = "optional"
section = "net"

[package.metadata.generate-rpm]
assets = [
  { dest = "/usr/bin/moltis", mode = "0755", source = "target/release/moltis" },
  { dest = "/usr/share/moltis/assets", mode = "0644", source = "crates/gateway/src/assets" },
]
license = "MIT"
name = "moltis"
summary = "Personal AI gateway inspired by OpenClaw"
url = "https://www.moltis.org/"

[[bin]]
name = "moltis"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
dotenvy            = { workspace = true }
moltis-agents      = { workspace = true }
moltis-browser     = { workspace = true }
moltis-common      = { workspace = true }
moltis-config      = { workspace = true }
moltis-cron        = { workspace = true }
moltis-gateway     = { workspace = true }
moltis-memory      = { workspace = true }
moltis-oauth       = { workspace = true }
moltis-onboarding  = { workspace = true }
moltis-plugins     = { workspace = true }
moltis-projects    = { workspace = true }
moltis-sessions    = { workspace = true }
moltis-skills      = { workspace = true }
moltis-tools       = { workspace = true }
open               = { workspace = true }
reqwest            = { workspace = true }
secrecy            = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
which              = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = [
  "file-watcher",
  "local-llm",
  "metrics",
  "prometheus",
  "push-notifications",
  "qmd",
  "tailscale",
  "tls",
  "voice",
  "web-ui",
  "web-ui-embedded-assets",
]
file-watcher = ["moltis-gateway/file-watcher"]
local-llm = ["moltis-gateway/local-llm"]
local-llm-cuda = ["moltis-gateway/local-llm-cuda"]
local-llm-metal = ["moltis-gateway/local-llm-metal"]
metrics = ["moltis-gateway/metrics"]
prometheus = ["moltis-gateway/prometheus"]
push-notifications = ["moltis-gateway/push-notifications"]
qmd = ["moltis-gateway/qmd"]
tailscale = ["moltis-gateway/tailscale"]
tls = ["moltis-gateway/tls"]
voice = ["moltis-gateway/voice"]
web-ui = ["moltis-gateway/web-ui"]
web-ui-embedded-assets = ["moltis-gateway/web-ui-embedded-assets"]

[lints]
workspace = true
