[package]
description       = "Personal AI gateway inspired by OpenClaw"
edition.workspace = true
homepage          = "https://www.moltis.org/"
license           = "MIT"
name              = "moltis"
repository        = "https://github.com/moltis-org/moltis"
version.workspace = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/moltis-{ version }-{ target }.tar.gz"

[package.metadata.deb]
assets     = [["target/release/moltis", "usr/bin/", "755"]]
copyright  = "2025, Moltis Contributors"
depends    = "$auto"
maintainer = "Moltis Contributors"
name       = "moltis"
priority   = "optional"
section    = "net"

[package.metadata.generate-rpm]
assets  = [{ dest = "/usr/bin/moltis", mode = "0755", source = "target/release/moltis" }]
license = "MIT"
name    = "moltis"
summary = "Personal AI gateway inspired by OpenClaw"
url     = "https://www.moltis.org/"

[[bin]]
name = "moltis"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
dotenvy            = { workspace = true }
moltis-agents      = { workspace = true }
moltis-browser     = { workspace = true }
moltis-common      = { workspace = true }
moltis-config      = { workspace = true }
moltis-cron        = { workspace = true }
moltis-gateway     = { workspace = true }
moltis-memory      = { workspace = true }
moltis-oauth       = { workspace = true }
moltis-onboarding  = { workspace = true }
moltis-plugins     = { workspace = true }
moltis-projects    = { workspace = true }
moltis-sessions    = { workspace = true }
moltis-skills      = { workspace = true }
moltis-tools       = { workspace = true }
moltis-web         = { optional = true, workspace = true }
open               = { workspace = true }
reqwest            = { workspace = true }
secrecy            = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
which              = { workspace = true }

[target.'cfg(all(not(target_os = "windows"), not(all(target_os = "linux", target_arch = "aarch64"))))'.dependencies]
tikv-jemallocator = { optional = true, workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = [
  "agent",
  "file-watcher",
  "graphql",
  "jemalloc",
  "local-llm",
  "metrics",
  "prometheus",
  "push-notifications",
  "qmd",
  "tailscale",
  "tls",
  "vault",
  "voice",
  "web-ui",
]
agent              = ["moltis-gateway/agent", "moltis-web?/agent"]
# Minimal build for memory-constrained devices (Raspberry Pi, etc.).
# Build with: cargo build --release --no-default-features --features lightweight
file-watcher = ["moltis-gateway/file-watcher"]
graphql      = ["moltis-gateway/graphql", "moltis-web?/graphql"]
jemalloc     = ["dep:tikv-jemallocator"]
# jemalloc is intentionally unavailable on linux/aarch64 to avoid runtime
# crashes on 16 KiB page kernels (e.g. Raspberry Pi OS variants).
lightweight        = ["jemalloc", "tls", "web-ui"]
local-llm          = ["moltis-gateway/local-llm"]
metrics            = ["moltis-gateway/metrics", "moltis-web?/metrics"]
prometheus         = ["moltis-gateway/prometheus"]
push-notifications = ["moltis-gateway/push-notifications", "moltis-web?/push-notifications"]
qmd                = ["moltis-gateway/qmd"]
tailscale          = ["moltis-gateway/tailscale", "moltis-web?/tailscale"]
tls                = ["moltis-gateway/tls"]
vault              = ["moltis-gateway/vault", "moltis-web?/vault"]
voice              = ["moltis-gateway/voice", "moltis-web?/voice"]
web-ui             = ["dep:moltis-web", "moltis-gateway/web-ui"]

[lints]
workspace = true
