[package]
edition.workspace = true
name              = "moltis-config"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
chrono-tz      = { workspace = true }
directories    = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
