[package]
edition.workspace = true
name              = "moltis-cron"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
async-trait    = "0.1"
chrono         = "0.4"
chrono-tz      = "0.10"
cron           = "0.13"
dirs-next      = "2"
moltis-agents  = { workspace = true }
moltis-common  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
