[package]
edition.workspace = true
name              = "moltis-cron"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
async-trait    = { workspace = true }
chrono         = { workspace = true }
chrono-tz      = { workspace = true }
cron           = { workspace = true }
dirs-next      = { workspace = true }
moltis-agents  = { workspace = true }
moltis-common  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
